替换ejs, 改为同构

--- a/server/template.html
+++ b/server/template.html
@@ -1,4 +1,3 @@
-<!-- 使用ejs模板引擎渲染页面 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,10 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <%- style %>
 </head>
 <body>
-  <div id="root"><%- appString %></div>
-  <%- scripts %>
+  <!--vue-ssr-outlet-->
 </body>
 </html>
