--- a/server/template.html
+++ b/server/template.html
@@ -7,6 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-  <!--vue-ssr-outlet-->
+  <div id="root">
+    <!--vue-ssr-outlet-->
+  </div>
 </body>
 </html>
